GNOM: Introduciong NetworkObject and ObjectNetworkPresence. Created GeneralNetworkObjectLinker. Updated copyrights and updated GNOM Diagram