@@ -6,14 +6,17 @@
  *  You can download this source code, and modify it ONLY FOR PERSONAL USE and you
  *  ARE NOT ALLOWED to distribute your MODIFIED VERSION.
  *
- *  Please contact maximebatista18@gmail.com if you need additional information or have any
+ *  Please contact overridelinkit@gmail.com if you need additional information or have any
  *  questions.
  */
 
 plugins {
     id 'java'
     id 'scala'
+    id 'org.javamodularity.moduleplugin'
 }
+
+apply plugin: 'org.javamodularity.moduleplugin'
 
 group 'fr.linkit'
 version '1.0-SNAPSHOT'
@@ -22,26 +25,21 @@ repositories {
     mavenCentral()
 }
 
-jar {
-    manifest {
-        attributes(
-                'Main-Class': 'fr.linkit.server.ServerLauncher',
-        )
-    }
-}
-
-
 dependencies {
-    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.8.0-M1'
+    implementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.8.0-M1'
+    implementation group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.8.0-M1'
     implementation group: 'org.scala-lang', name: 'scala-library', version: '2.13.6'
     implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
-    implementation group: 'io.suzaku', name: 'boopickle_2.13', version: '1.3.3'
 
     implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.14.1'
     implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.14.1'
 
-    implementation project(':Engine')
-    implementation project(':API')
-//    implementation project(':LinkitPlugins:DebugPlugin')
-//    implementation project(':LinkitPlugins:CLICommands')
+}
+
+tasks.withType(AbstractCompile) {
+    options.compilerArgs += ["--module-path", "C:\\Users\\maxim\\.gradle\\caches\\modules-2\\files-2.1\\org.scala-lang\\scala-library\\2.13.6\\ed7a2f528c7389ea65746c22a01031613d98ab3d\\scala-library-2.13.6.jar"]
+}
+
+tasks.withType(Test) {
+    jvmArgs += ["--add-modules", "scala.library"]
 }
